fix: display table fixed and scrollbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,9 +262,14 @@ body {
 }
 
 // table header fixed
+.tableFixHead {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
 .table__header .table__cell {
   position: sticky;
-  top: -45px;
+  top: 0px;
   z-index: 1;
   background: var(--header-color);
 }
